# edm

./: .env.example  .features_msaf_tmp.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_SERVER_LOG_PREVIEW.md  IDEAS.md  PLAN.md  README.md  STRUCTURE_ANNOTATIONS_GUIDE.md  TODO.md  coverage.json  data.dvc  docs-review-plan.md  dvc.yaml  eslint.config.js  import_rekordbox.py  import_rekordbox_jams.py  justfile  memory-graph-draft.json  migrate_annotations.py  package.json  params.yaml  prettier.config.js  pyproject.toml  tsconfig.json
.claude/: DEV_NOTES.md  settings.local.json
.claude/commands/: analyze.md  annotate.md  check.md  clean.md  cmds.md  code.md  deps.md  evaluate.md  idea.md  list.md  shipit.md  status.md  sync.md  todo.md
.claude/contexts/: annotate.xml  audio.xml  data-schema.xml  edm-terminology.xml  evaluate.xml  evaluation.xml  javascript.xml  ml-training.xml  openspec.xml  project-memory.json  project-setup.xml  python.xml  training-memory.json
.claude/hooks/: inject-edm-context.sh  inject-javascript-context.sh
.claude/scripts/: analyze.sh  annotate.sh  check.sh  ci-cache.sh  clean.sh  deps.sh  evaluate.sh  generate-annotations.sh  state.sh
.dvc/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/results/: README.md
configs/: README.md  dataset_config.yaml  training_first_run.yaml
data/accuracy/: README.md
data/accuracy/bpm/: 2025-11-24_212400_bpm_eval_commit-1ae27e0.json  2025-11-24_212400_bpm_eval_commit-1ae27e0.md  2025-11-24_231702_bpm_eval_commit-fe4e46f.json  2025-11-24_231702_bpm_eval_commit-fe4e46f.md  2025-11-25_085831_bpm_eval_commit-e2d8292.json  2025-11-25_085831_bpm_eval_commit-e2d8292.md  2025-11-26_140123_bpm_eval_commit-41e788c.json  2025-11-26_140123_bpm_eval_commit-41e788c.md  2025-11-26_140419_bpm_eval_commit-41e788c.json  2025-11-26_140419_bpm_eval_commit-41e788c.md  2025-11-26_213616_bpm_eval_commit-6274363.json  2025-11-26_213616_bpm_eval_commit-6274363.md
data/annotations/: 3LAU_Dnmo_-_Falling.yaml  Atmos_Born_Sleepy_-_Ritual_Girl_Original_mix.yaml  DJ_RhythmCore_-_Narcos.yaml  Esilum_-_Room_20-1.yaml  Fyex_Dj_Samir_-_Eternal_Rave.yaml  Invexis_-_Summer_Night.yaml  dj-rhythmcore-narcos.yaml  structure_annotations.csv  structure_annotations.yaml
data/annotations/reference/: atmos-born-sleepy-ritual-girl.yaml  dj-rhythmcore-narcos.yaml  esilum-room-20-1.yaml  fyex-dj-samir-eternal-rave.yaml  invexis-summer-night.yaml
docs/: INDEX.md  agent-guide.md  analysis-algorithms.md  architecture.md  cli-patterns.md  cli-reference.md  common-tasks.md  deployment.md  development.md  experiment-tracking.md  getting-started.md  index.html  learning-based-pivot-research.md  mlops.md  project-structure.md  python-style.md  related-projects.md  testing.md  training-quickref.md  training.md  troubleshooting.md  week1-final-summary.md  week1-summary.md
docs/cheatsheets/: common-commands.md  training.md
docs/development/: claude-integration.md  code-style-javascript.md  code-style-python.md  setup.md  testing.md
docs/guides/: annotator.md  data-management.md  model-management.md  training.md
docs/reference/: terminology.md  troubleshooting.md
experiments/4hr_training/: evaluation_results.json
experiments/4hr_training/evaluation_detailed/: detailed_results.json
experiments/4hr_training/mert95m_4hr_70ep/: config.yaml  metadata.yaml
experiments/4hr_training_test/test_4hr_config_1epoch/: config.yaml
experiments/4hr_training_test/test_4hr_config_bs4_1epoch/: config.yaml  metadata.yaml
experiments/debug_run/debug/: config.yaml  metadata.yaml
experiments/first_run/first_real_run_mert95m_30ep/: config.yaml
experiments/first_run/run_20251207_083455_mert-95m_default/: config.yaml
experiments/first_run/run_20251207_083531_mert-95m_default/: config.yaml
experiments/first_run/run_20251207_083621_mert-95m_default/: config.yaml
experiments/first_run/run_20251207_160353_mert-95m_default/: config.yaml
experiments/first_run/run_20251207_160516_mert-95m_default/: config.yaml  metadata.yaml
openspec/: project.md  schema_requirements_and_workflow_validation.md
openspec/archive/2025-12-04-algorithmic-proposals/: README.md
openspec/archive/CLI-simplify-interface/: design.md  proposal.md  tasks.md
openspec/archive/STRUCT-bar-indexing-and-events/: proposal.md  tasks.md
openspec/archive/WORKFLOW-restructure-workflow/: design.md  proposal.md  tasks.md
openspec/changes/ARCHDEP-break-circular-dependencies/: proposal.md  tasks.md
openspec/changes/CLEANUP-aggressive-ml-pivot/: proposal.md
openspec/changes/CTXINJ-add-context-injection/: tasks.md
openspec/changes/DATAMGMT-data-management-overhaul/: proposal.md  tasks.md
openspec/changes/DRIFT-data-drift-detection/: proposal.md  tasks.md
openspec/changes/FALLBACK-review-fallback-patterns/: proposal.md  tasks.md
openspec/changes/FIXCI-fix-ci-cache-failures/: tasks.md
openspec/changes/FIXEVAL-fix-evaluation-schema/: proposal.md  tasks.md
openspec/changes/HYBRID-msaf-energy-labeling/: tasks.md
openspec/changes/MLPIVOT-learning-based-pivot/: design.md  proposal.md  tasks.md
scripts/: ablation_study.py  benchmark_detectors.py  detect_label_errors.py  evaluate_model.py  evaluate_model_detailed.py
src/cli/: __init__.py  main.py
src/edm/: config.py  exceptions.py  logging.py
tests/: conftest.py
tests/estimations/: beat_120bpm.jams  beat_125bpm.jams  beat_128bpm.jams  beat_140bpm.jams  beat_150bpm.jams
tests/fixtures/: README.md  generate_test_audio.py  tag_test_audio.py
tests/integration/: test_analyze_parallel.py  test_cli.py  test_evaluate_parallel.py  test_training_smoke.py
tests/performance/: __init__.py  test_parallel_speedup.py
tests/security/: test_xxe.py
tests/unit/: test_analysis.py  test_audio_cache.py  test_audio_cache_threadsafe.py  test_bars.py  test_beat_detector.py  test_beat_grid.py  test_beat_structure_validator.py  test_bpm_detector.py  test_config.py  test_logging.py  test_metadata.py  test_output_formats.py  test_structure.py
(+271 files in other folders)
