[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.25", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edm"
version = "0.1.0"
description = "EDM track analysis library and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "EDM Project Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "madmom @ git+https://github.com/CPJKU/madmom.git",
    "essentia>=2.1b5",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "spotipy>=2.23.0",
    "requests>=2.31.0",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[project.scripts]
edm = "cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    # Ignore internal deprecations in external libraries
    "ignore:'aifc' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:'audioop' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:'sunau' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:librosa.core.audio.__audioread_load:FutureWarning:librosa.core.audio",
    # PySoundFile warning is internal to librosa's load implementation
    "ignore:PySoundFile failed:UserWarning",
    "ignore:Using extra keyword arguments on `Field`:pydantic.warnings.PydanticDeprecatedSince20:edm.config",
    "ignore:Support for class-based `config`:pydantic.warnings.PydanticDeprecatedSince20:edm.config",
    # Keep warnings about our usage of libraries - only filter internal library issues
]
