[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.25", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edm"
version = "0.1.0"
description = "EDM track analysis library and CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "EDM Project Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "beat-this @ git+https://github.com/CPJKU/beat_this.git",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "cleanlab>=2.0.0",
    "tensorboard>=2.0.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "mutagen>=1.47.0",
    "structlog>=24.1.0",
    "msaf>=0.1.80",
    "pyyaml>=6.0.0",
    "dvc>=3.0.0",
    "jams>=0.3.5",
    "mir_eval>=0.7",
]

[project.optional-dependencies]
annotation-ui = [
    "label-studio>=1.10.0",
    "label-studio-sdk>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.0",
    "pre-commit>=4.5.0",
]

[project.scripts]
edm = "cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "beat_this.*",
    "cleanlab.*",
    "dvc.*",
    "matplotlib.*",
    "msaf.*",
    "pydantic.*",
    "rich.*",
    "scipy.*",
    "tensorboard.*",
    "torch.*",
    "torchaudio.*",
    "transformers.*",
    "typer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "manual: marks tests that require manual execution",
]
filterwarnings = [
    # Ignore internal deprecations in external libraries
    "ignore:'aifc' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:'audioop' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:'sunau' is deprecated:DeprecationWarning:audioread.rawread",
    "ignore:librosa.core.audio.__audioread_load:FutureWarning:librosa.core.audio",
    # PySoundFile warning is internal to librosa's load implementation
    "ignore:PySoundFile failed:UserWarning",
    "ignore:Using extra keyword arguments on `Field`:pydantic.warnings.PydanticDeprecatedSince20:edm.config",
    "ignore:Support for class-based `config`:pydantic.warnings.PydanticDeprecatedSince20:edm.config",
    # Keep warnings about our usage of libraries - only filter internal library issues
]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_errors = true
